[gd_scene format=3 uid="uid://bigg16w47258m"]

[ext_resource type="Script" uid="uid://cni7nre6bj6d3" path="res://Assets/Scripts/pause_menu.gd" id="1_emv3i"]
[ext_resource type="FontFile" uid="uid://c3tx1jv64cooj" path="res://Assets/Fonts/HomeVideoBold-R90Dv.ttf" id="2_k0w1u"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_emv3i"]
content_margin_left = 20.0
content_margin_top = 20.0
content_margin_right = 20.0
content_margin_bottom = 20.0
bg_color = Color(0.16862746, 0.16862746, 0.16862746, 0.70980394)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[node name="PauseMenu" type="CanvasLayer" unique_id=2039964311]
process_mode = 3
layer = 10
script = ExtResource("1_emv3i")

[node name="ColorRect" type="ColorRect" parent="." unique_id=923435148]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.16078432)

[node name="Panel" type="Panel" parent="." unique_id=1573641235]
custom_minimum_size = Vector2(500, 400)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -200.0
offset_right = 250.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_emv3i")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel" unique_id=1294066873]
custom_minimum_size = Vector2(400, 300)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 12
alignment = 1

[node name="Pausa" type="Label" parent="Panel/VBoxContainer" unique_id=1694202901]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_k0w1u")
theme_override_font_sizes/font_size = 32
text = "Pausa"
horizontal_alignment = 1
uppercase = true

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/VBoxContainer" unique_id=1764302692]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer/VBoxContainer" unique_id=733778538]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
text = "Volumen"

[node name="Volumen" type="HSlider" parent="Panel/VBoxContainer/VBoxContainer" unique_id=1201694139]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
size_flags_vertical = 4
max_value = 3.0
step = 0.05

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/VBoxContainer/VBoxContainer" unique_id=1325990407]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer/VBoxContainer/VBoxContainer" unique_id=518366102]
layout_mode = 2
size_flags_horizontal = 4
text = "Sensibilidad"

[node name="Sensibilidad" type="HSlider" parent="Panel/VBoxContainer/VBoxContainer/VBoxContainer" unique_id=384618158]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
min_value = 0.01
max_value = 0.5
step = 0.005
value = 0.01

[node name="Reanudar" type="Button" parent="Panel/VBoxContainer" unique_id=379252509]
layout_mode = 2
text = "Reanudar"

[node name="Salir" type="Button" parent="Panel/VBoxContainer" unique_id=1019391435]
layout_mode = 2
text = "Salir"

[connection signal="value_changed" from="Panel/VBoxContainer/VBoxContainer/Volumen" to="." method="_on_volumen_value_changed"]
[connection signal="value_changed" from="Panel/VBoxContainer/VBoxContainer/VBoxContainer/Sensibilidad" to="." method="_on_sensibilidad_value_changed"]
[connection signal="pressed" from="Panel/VBoxContainer/Reanudar" to="." method="_on_reanudar_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Salir" to="." method="_on_salir_pressed"]
